--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -106,18 +106,14 @@
                     </div>
 
                     <div class="readOnlyContent dashboardHomeRightColumn firstDashboardHomeRightColumn">
-                        <div data-role="collapsible" data-collapsed="false">
-                            <h3>${HeaderRecentActivity}</h3>
-                            <div class="activityItems">
-                            </div>
+                        <h1>${HeaderRecentActivity}</h1>
+                        <div class="paperList activityItems">
                         </div>
                     </div>
 
                     <div class="readOnlyContent dashboardHomeRightColumn">
-                        <div data-role="collapsible" data-collapsed="false">
-                            <h3>${HeaderLatestNews}</h3>
-                            <div class="latestNewsItems">
-                            </div>
+                        <h1>${HeaderLatestNews}</h1>
+                        <div class="paperList latestNewsItems">
                         </div>
                     </div>
 
