--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -23,9 +23,9 @@
 
                     <div class="readOnlyContent dashboardHomeLeftColumn">
 
-                        <div data-role="collapsible" data-collapsed="false">
-                            <h3>${HeaderServerInformation}</h3>
-                            <div>
+                        <div>
+                            <h1>${HeaderServerInformation}</h1>
+                            <div class="paperList" style="padding:1em;">
                                 <p id="appVersionNumber">
                                 </p>
                                 <p id="pUpToDate" style="display: none;">
@@ -68,8 +68,8 @@
                             </div>
                         </div>
 
-                        <div class="activeDevicesCollapsible" data-role="collapsible" data-collapsed="false" data-content-theme="false" style="margin-top: 2em;">
-                            <h3>${HeaderActiveDevices}</h3>
+                        <div class="activeDevicesCollapsible" style="margin-top: 2em;">
+                            <h1>${HeaderActiveDevices}</h1>
                             <div class="activeDevices">
                             </div>
                         </div>
