--- a/MediaBrowser.WebDashboard/dashboard-ui/library.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/library.html
@@ -23,9 +23,11 @@
 
                     <br />
                     <div class="readOnlyContent">
-                        <button type="button" class="btnRefresh" data-icon="refresh" data-mini="true">${ButtonScanLibrary}</button>
-                        <progress max="100" min="0" style="width: 100%;" class="refreshProgress"></progress>
-                        <div style="margin-top: 5px;">${LabelLastResult} <span class="lastRefreshResult"></span></div>
+                        <paper-button raised class="btnRefresh block submit"><iron-icon icon="refresh"></iron-icon><span>${ButtonScanLibrary}</span></paper-button>
+                        <div style="margin:5px;">
+                            <progress max="100" min="0" style="width: 100%;" class="refreshProgress"></progress>
+                            <div style="margin-top: 5px;">${LabelLastResult} <span class="lastRefreshResult"></span></div>
+                        </div>
                     </div>
 
                 </div>
