--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
@@ -26,7 +26,7 @@
         </style>
         <div data-role="content">
             <div class="readOnlyContent" style="margin: 0 auto;">
-                <h1>${HeaderSettings}</h1>
+                <h1 class="settingsMenuHeader">${HeaderSettings}</h1>
                 <div class="paperList">
                     <a href="#" class="clearLink lnkDisplayPreferences">
                         <paper-icon-item>
