--- a/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
@@ -22,9 +22,9 @@
             <div class="ehsContent" style="clear:both;">
                 <br />
                 <div class="localSyncStatus hide" style="text-align:right;margin:0 0 1em;">
-                    <span style="vertical-align: middle;margin-right:.5em;" class="labelSyncStatus">${LabelSyncStatus}</span>
+                    <span style="vertical-align: middle;margin-right:.5em;" class="labelSyncStatus"></span>
                     <paper-spinner class="syncSpinner" active style="vertical-align: middle;"></paper-spinner>
-                    <paper-fab class="btnSyncNow bottomFab" icon="sync" style="position:fixed;right:20px;background-color:#2ad;z-index:10;"></paper-fab>
+                    <paper-fab class="btnSyncNow mini accent" icon="sync"></paper-fab>
                 </div>
                 <div class="syncActivity">
 
