--- a/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-out.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-out.html
@@ -2755,7 +2755,7 @@ prevent = dy > dx;
 prevent = dx > dy;
 }
 if (prevent) {
-ev.preventDefault();
+//ev.preventDefault();
 } else {
 Gestures.prevent('track');
 }
