update now playing

--- a/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
@@ -32,6 +32,19 @@
                 </div>
 
                 <br />
+                <h1>
+                    ${HeaderCameraUpload}
+                </h1>
+                <div class="detailSectionContent">
+
+                    <p>${SelectCameraUploadServers}</p>
+
+                    <br />
+                    <div class="paperCheckboxList uploadServerList">
+                    </div>
+                </div>
+
+                <br />
                 <br />
                 <button type="submit" data-role="none" class="clearButton">
                     <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
