--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -144,13 +144,15 @@
                     </h1>
                     <div>
                         <p id="awardSummary"></p>
-                        <div id="criticRatingSummary" class="criticReview criticRatingSummary" style="display: none;">
-                            <p style="margin: 0 0 .5em -40px; font-weight: bold;">TOMATOMETER®</p>
-                            <div class="reviewScore">
-                                <img src="css/images/fresh.png">
-                            </div>
-                            <div class="criticRatingScore"></div>
-                            <div class="criticRatingSummaryText"></div>
+                        <div class="paperList" id="criticRatingSummary">
+                            <paper-icon-item>
+                                <paper-fab class="listAvatar" style="background-color: transparent; background-repeat: no-repeat; background-position: center center; background-size: cover; background-image: url(css/images/fresh.png);" item-icon></paper-fab>
+                                <paper-item-body three-line>
+                                    <div>TOMATOMETER®</div>
+                                    <div class="criticRatingScore"></div>
+                                    <div class="criticRatingSummaryText" style="white-space: normal;" secondary></div>
+                                </paper-item-body>
+                            </paper-icon-item>
                         </div>
                         <div id="criticReviewsContent"></div>
                     </div>
