--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -6,7 +6,7 @@
 <body>
     <div id="nowPlayingPage" data-role="page" class="page libraryPage nowPlayingPage noSecondaryNavPage" data-contextname="${TitleRemoteControl}" data-theme="b" data-require="jqmcollapsible,scripts/nowplayingpage">
 
-        <div class="libraryViewNav">
+        <div class="libraryViewNav hide">
             <div>
                 <a href="#" data-index="0">${TabNowPlaying}</a>
                 <a href="#" data-index="1">${TabControls}</a>
