update recording file names

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
@@ -10,7 +10,7 @@
         <div data-role="content">
             <form class="homeScreenPreferencesForm userProfileSettingsForm" style="margin: 0 auto;">
 
-                <div class="detailSection homeSections hide">
+                <div class="detailSection homeSections">
                     <h1>
                         ${HeaderHomePage}
                     </h1>
