update media sync

--- a/MediaBrowser.WebDashboard/dashboard-ui/tv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tv.html
@@ -39,7 +39,7 @@
                                 <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
 
-                            <div id="resumableItems" class="itemsContainer">
+                            <div id="resumableItems" class="itemsContainer noautoinit">
                             </div>
                         </div>
 
