--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -37,7 +37,7 @@
                                 <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
 
-                            <div id="resumableItems" class="itemsContainer">
+                            <div id="resumableItems" class="itemsContainer noautoinit">
                             </div>
                         </div>
 
@@ -47,7 +47,7 @@
                                 <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
 
-                            <div id="recentlyAddedItems" class="itemsContainer">
+                            <div id="recentlyAddedItems" class="itemsContainer noautoinit">
                             </div>
                         </div>
 
