--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -43,7 +43,7 @@
                                 <input type="checkbox" id="chkOtherTrailers" />
                             </fieldset>
                             <div class="fieldDescription">${LabelTheseFeaturesRequireSupporterHelpAndTrailers}</div>
-                            <div class="fieldDescription"><a class="lnkSupporterLearnMore" href="supporter.html" style="display:none;">${ButtonLearnMore}</a></div>
+                            <div class="fieldDescription"><a class="lnkSupporterLearnMore" href="http://emby.media/donate" target="_blank" style="display:none;">${ButtonLearnMore}</a></div>
                         </li>
                         <li>
                             <label for="chkMyMovieTrailers">${OptionTrailersFromMyMovies}</label>
