--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -43,7 +43,7 @@
                                 <input type="checkbox" id="chkOtherTrailers" />
                             </fieldset>
                             <div class="fieldDescription">${LabelTheseFeaturesRequireSupporterHelpAndTrailers}</div>
-                            <div class="fieldDescription"><a class="lnkSupporterLearnMore" href="supporter.html" style="display:none;">${ButtonLearnMore}</a></div>
+                            <div class="fieldDescription"><a class="lnkSupporterLearnMore" href="http://emby.media/donate" target="_blank" style="display:none;">${ButtonLearnMore}</a></div>
                         </li>
                         <li>
                             <label for="chkMyMovieTrailers">${OptionTrailersFromMyMovies}</label>
@@ -53,10 +53,10 @@
                         </li>
                         <li>
                             <label for="txtCustomIntrosPath">${LabelCustomIntrosPath}</label>
-                            <div>
-                                <input type="text" id="txtCustomIntrosPath" style="display: inline-block; width: 85%;" />
-                                <paper-icon-button id="btnSelectCustomIntrosPath" icon="search"></paper-icon-button>
+                            <div style="display: inline-block; width: 85%;">
+                                <input type="text" id="txtCustomIntrosPath" />
                             </div>
+                            <button id="btnSelectCustomIntrosPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
                             <div class="fieldDescription">${LabelCustomIntrosPathHelp}</div>
                         </li>
                         <li>
