update schedules direct

--- a/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
@@ -66,14 +66,14 @@
 
                                             <p>${MessageSupporterPluginRequiresMembership}</p>
 
-                                            <p><a href="http://emby.media/donate" target="_blank">${LinkSupporterMembership}</a></p>
+                                            <p><a href="http://emby.media/premiere" target="_blank">${LinkSupporterMembership}</a></p>
 
                                         </div>
                                         <div class="premiumDescription">
 
                                             <p>${MessagePremiumPluginRequiresMembership}</p>
 
-                                            <p><a href="http://emby.media/donate" target="_blank">${LinkSupporterMembership}</a></p>
+                                            <p><a href="http://emby.media/premiere" target="_blank">${LinkSupporterMembership}</a></p>
                                         </div>
                                         <div class="premiumHasPrice" style="display: none">
                                             <p id="regPrice">
