--- a/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
@@ -10,7 +10,7 @@
 
             <div class="supporterPromotionContainer" style="display:none;text-align: right;">
                 <div class="customSupporterPromotion supporterPromotion inlineSupporterPromotion">
-                    <a class="btn btnActionAccent" href="http://emby.media/donate" target="_blank" style="font-size:14px;">
+                    <a class="btn btnActionAccent" href="http://emby.media/premiere" target="_blank" style="font-size:14px;">
                         <div class="mainText">
                         </div>
                         <div class="btnLearnMore" style="font-weight:normal;font-size:90%;margin-top:5px;">
