--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -29,7 +29,7 @@
 
                     <div class="supporterContainer hide">
                         <br />
-                        <a class="clearLink" href="http://emby.media/donate" target="_blank">
+                        <a class="clearLink" href="http://emby.media/premiere" target="_blank">
                             <paper-button raised class="block accent"><iron-icon icon="check"></iron-icon><span>${HeaderBecomeProjectSupporter}</span></paper-button>
                         </a>
                     </div>
