--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
@@ -70,7 +70,7 @@
                     <div class="supporterContainer hide">
                         <p>${MessageActiveSupporterMembershipRequiredSeriesRecordings}</p>
                         <p class="supporterTrial hide">${HeaderEnjoyDayTrial}</p>
-                        <a class="clearLink btnSupporter hide" href="http://emby.media/donate" target="_blank"><paper-button raised class="accent block"><iron-icon icon="check"></iron-icon><span>${HeaderBecomeProjectSupporter}</span></paper-button></a>
+                        <a class="clearLink btnSupporter hide" href="http://emby.media/premiere" target="_blank"><paper-button raised class="accent block"><iron-icon icon="check"></iron-icon><span>${HeaderBecomeProjectSupporter}</span></paper-button></a>
                         <br />
                     </div>
                     <button type="submit" data-role="none" class="clearButton btnSubmitContainer">
