--- a/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
@@ -22,7 +22,7 @@
                 <br />
                 <div class="supporterPromotionContainer" style="display:none;">
                     <div class="customSupporterPromotion supporterPromotion">
-                        <a class="btn btnActionAccent" href="http://emby.media/donate" target="_blank" style="font-size:14px;">
+                        <a class="btn btnActionAccent" href="http://emby.media/premiere" target="_blank" style="font-size:14px;">
                             <div class="mainText">
                             </div>
                             <div class="btnLearnMore" style="font-weight:normal;font-size:90%;margin-top:5px;">
