--- a/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
@@ -64,16 +64,16 @@
                                         </p>
                                         <div class="supporterDescription">
 
-                                            <p>${MessageSupporterPluginRequiresMembership}</p>
+                                            <p>${MessagePluginRequiresSubscription}</p>
 
-                                            <p><a href="http://emby.media/premiere" target="_blank">${LinkSupporterMembership}</a></p>
+                                            <p><a href="http://emby.media/premiere" target="_blank">${LinkLearnMoreAboutSubscription}</a></p>
 
                                         </div>
                                         <div class="premiumDescription">
 
                                             <p>${MessagePremiumPluginRequiresMembership}</p>
 
-                                            <p><a href="http://emby.media/premiere" target="_blank">${LinkSupporterMembership}</a></p>
+                                            <p><a href="http://emby.media/premiere" target="_blank">${LinkLearnMoreAboutSubscription}</a></p>
                                         </div>
                                         <div class="premiumHasPrice" style="display: none">
                                             <p id="regPrice">
